<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Finalizar">

    <RadioGroup
        android:id="@+id/rdgAguarde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdoDf">

        <TextView
            android:id="@+id/textView15"
            style="@style/bto_fonte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/log_aguarde" />


    </RadioGroup>

    <ImageView
        android:id="@+id/imageVtop2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorPrimary" />

    <ImageView
        android:id="@+id/imageViewbk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/app_name"
        android:onClick="cancelar"
        app:layout_constraintBottom_toBottomOf="@+id/imageVtop2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/imageVtop2"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_logo" />

    <TextView
        android:id="@+id/textView20"
        style="@style/bto_textob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="@string/app_name"
        android:textColor="@color/colorBranco"
        android:textSize="@dimen/tx_22"
        app:layout_constraintBottom_toBottomOf="@+id/imageVtop2"
        app:layout_constraintStart_toStartOf="@+id/imageVtop2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView36"
        style="@style/bto_texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/finpasso"
        android:textSize="@dimen/tx_18"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageVtop2" />

    <RadioGroup
        android:id="@+id/rdoDf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView36">

        <EditText
            android:id="@+id/edtDdd"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:ems="2"
            android:hint="@string/hin_ddd"
            android:inputType="phone"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/edtCel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hin_celular"
            android:inputType="phone"
            android:textAlignment="center" />
    </RadioGroup>

    <ScrollView
        android:id="@+id/scrCadastro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdoDf">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ven_nome"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edtCpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ven_cpf"
                android:inputType="number" />

            <EditText
                android:id="@+id/edtEndereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ven_endereco"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edtComplemento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ven_complemento"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edtBairro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ven_bairro"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />


            <EditText
                android:id="@+id/edtCidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ven_cidade"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <Spinner
                android:id="@+id/spestado"
                style="@style/bto_fonte"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:entries="@array/linguagens"
                android:prompt="@string/linguagem_prompt"
                android:textAlignment="textStart" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                app:srcCompat="@color/colorVerdeFonte" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/textView19"
                style="@style/bto_fontt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ven_receber"
                android:textSize="@dimen/tx_18" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/txtVlr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ven_valor"
                android:textAlignment="center"
                android:textSize="@dimen/tx_18" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgDinheiro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:onClick="venDin"
                    app:srcCompat="@mipmap/ic_dinheiro" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="venPix"
                    app:srcCompat="@mipmap/ic_qrcode_m" />

                <ImageView
                    android:id="@+id/imageVcartao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="invisible"
                    app:srcCompat="@mipmap/ic_cartao" />

            </RadioGroup>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtDinheiro"
                    style="@style/bto_fonte"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:onClick="venDin"
                    android:text="@string/ven_dinheiro"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/txtQrcode"
                    style="@style/bto_fonte"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:onClick="venPix"
                    android:text="@string/ven_pix"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/txtCartao"
                    style="@style/bto_fonte"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:onClick="venPix"
                    android:visibility="invisible"
                    android:text="@string/ven_cartao"
                    android:textAlignment="center" />
            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                app:srcCompat="@color/colorVerdeFonte" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView23"
                    style="@style/bto_fontt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:text="@string/ven_vendedor"
                    android:textAlignment="viewEnd" />

                <TextView
                    android:id="@+id/txtVendedor"
                    style="@style/bto_fonte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:text="@string/ven_vendedor"
                    android:textAlignment="viewStart" />

            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>